--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "devux-next-auth",
+  "name": "koko-next-auth",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "next": "13.5.4",
+    "cookie": "^0.5.0",
+    "next-auth": "latest"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -19,6 +21,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
+    "@types/cookie": "^0.5.2",
     "eslint-config-next": "13.5.4"
   }
 }
